syntax = "proto3";
package stwartchain.feepolicy;

option go_package = "github.com/stalwart-algoritmiclab/stwart-chain-go/x/feepolicy/types";
import "stwartchain/feepolicy/fees.proto";

message Tariff {
  string denom = 1;
  uint64 id = 2;
  string amount = 3;
  string minRefBalance = 4;
  repeated Fees fees = 5;
}

